--- a/Blog_Website/templates/post_detail.html
+++ b/Blog_Website/templates/post_detail.html
@@ -5,12 +5,45 @@
     <div class="col-md-8 card mb-4  mt-3 left  top">
       <div class="card-body">
         <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
-        <p class=" text-muted">{{ simpleblogpost.author }} | {{ simpleblogpost.created_on }}</p>
+        <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
       </div>
     </div>
     {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
   </div>
+
+  <!-- Comments Form -->
+  <h2>Add a new comment</h2>
+  <form action="." method="post">
+      {{ comment_form.as_p }}
+      {% csrf_token %}
+      <button type="submit">Add comment</button>
+  </form>
+
+  <!-- Comment with nested comments -->
+  {% for comment in comments %}
+      <div class="comment" style="background-color: powderblue">
+          <p class="info">{{ comment.name }} | {{ comment.created }}</p>
+              {{ comment.body|linebreaks }}
+
+          {% for reply in comment.replies.all %}
+              <p class="info">{{ reply.name }} | {{ reply.created }}</p>
+              <li>{{ reply.body }}</li>
+          {% endfor %}
+
+          <h5>Reply</h5>
+          <form action="." method="post">
+              {{ comment_form.as_p }}
+              {% csrf_token %}
+              <!-- Hidden input for parent comment.id -->
+              <input type="hidden" name="parent_id" value="{{ comment.id }}">
+              <input class="btn btn-primary" type="submit" value="Replay">
+          </form>
+      </div>
+  {% empty %}
+  <h4>There are no comments yet.</h4>
+  {% endfor %}
+
 </div>
 
 {% endblock content %}
