--- a/Blog_Website/templates/sidebar.html
+++ b/Blog_Website/templates/sidebar.html
@@ -1,3 +1,8 @@
+<!-- Include Via: -->
+{% block sidebar %}
+    {% include 'sidebar.html' %}
+{% endblock sidebar %}
+
 {% block sidebar %}
 
 <style>
@@ -12,7 +17,7 @@
 <div class="card my-4">
         <h5 class="card-header">About Us</h5>
     <div class="card-body">
-        <p class="card-text"> This awesome blog is made on the top of our Favourite full stack Framework 'Django', follow up the tutorial to learn how we made it..!</p>
+        <p class="card-text"> Simple Blog!</p>
         <a href="#"
            class="btn btn-danger">Know more!</a>
     </div>
