--- a/Blog_Website/templates/base.html
+++ b/Blog_Website/templates/base.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
+<!-- Base of every single page -->
 
-<!-- SetUp: -->
+
+<!-- Head - Bootstrap: -->
 <html>
-    <head>
-        <title>Simple Blog</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <!-- Bootstrap: -->
-        <link
-            href="https://fonts.googleapis.com/css?family=Roboto:400,700"
-            rel="stylesheet">
-        <meta name="google" content="notranslate" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-          rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous"
-        />
+    <title>Simple Blog</title>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-    </head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>`
+
+  </head>
+
 
   <body>
     <style>
@@ -40,7 +45,7 @@
         background-color: #f00000;
         border-color: #dc281e;
       }
-     
+
      .masthead {
               background:#3398E1;
               height: auto;
@@ -51,59 +56,43 @@
     </style>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}" >Django central</a>
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+      <div class="container">
+        <!-- Logo/URL Home -->
+        <a class="navbar-brand" href="{% url 'home' %}">A Simple Blog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-       
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            
+            <!-- Links in Nav Bar-->
             <li class="nav-item text-black">
-              <a
-                class="nav-link text-black font-weight-bold"
-                href="#"
-                >About</a
-              >
+              <a class="nav-link text-black font-weight-bold" href="https://github.com/ns5ub/BlogApplication">
+                Github
+              </a>
             </li>
-            <li class="nav-item text-black">
-              <a
-                class="nav-link text-black font-weight-bold"
-                href="#"
-                >Policy</a
-              >
-            </li>
-            <li class="nav-item text-black">
-              <a
-                class="nav-link text-black font-weight-bold"
-                href="#"
-                >Contact</a
-              >
+
+            <!-- Final Item in Nav Bar: Dropdown-->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Other Pages
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Coming Soon!</a>
+              </div>
             </li>
           </ul>
         </div>
       </div>
-    </div>
     </nav>
-    
 
-            {% block content %} 
+    {% block content %}
           <!-- Content Goes here -->
-            {% endblock content %}
+    {% endblock content %}
     
     <!-- Footer -->
     <footer class="py-3 bg-grey">
-              <p class="m-0 text-dark text-center ">Copyright &copy; Django Central</p>
+      <p class="m-0 text-dark text-center ">Nikita Saxena</p>
     </footer>
     
   </body>
