--- a/Blog_Website/templates/base.html
+++ b/Blog_Website/templates/base.html
@@ -20,12 +20,25 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <!-- marked -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.0.2/marked.min.js"> </script>
+
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>`
 
+    <!-- Run the following when page loads to make things -->
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(".content-markdown").each(function(){
+          var content = $(this).text()
+          var markedContent = marked(content)
+          $(this).html(markedContent)
+        })
+      })
+    </script>
   </head>
 
 
