--- a/Blog_Website/templates/index.html
+++ b/Blog_Website/templates/index.html
@@ -26,8 +26,8 @@
                     <div class="card-body">
                         <h2 class="card-title">{{ post.title }}</h2>
                         <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
-                        <p class="card-text content-markdown">{{post.content|slice:":200" }}</p>
-                        <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+                        <p class="card-text content-markdown">{{post.content|slice:":200" }}...</p>
+                        <a href="{% url 'post_detail' post.slug  %}" class="btn btn-dark">Read More &rarr;</a>
                     </div>
                 </div>
             {% endfor %}
